--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^8.0.1",
+    "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
